force-app/main/default/objects/CC_Caracteristica_Detalle__c/CC_Caracteristica_Detalle__c.object-meta.xml
<CustomObject>
    <label>Característica Detalle</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Característica Detalles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>