force-app/main/default/objects/CC_Caracteristica_Detalle__c/fields/CC_Caracteristica__c.field-meta.xml
<CustomField>
    <fullName>CC_Caracteristica__c</fullName>
    <label>Característica</label>
    <referenceTo>CC_Caracteristica__c</referenceTo>
    <relationshipLabel>Asignaciones</relationshipLabel>
    <relationshipName>CC_Caracteristica_Detalles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>