force-app/main/default/objects/CC_Caracteristica_Detalle__c/fields/CC_Centro_CaixaBank__c.field-meta.xml
<CustomField>
    <fullName>CC_Centro_CaixaBank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centro CaixaBank</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Centro CaixaBank</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Centros CaixaBank</relationshipLabel>
    <relationshipName>CC_Caracteristica_Detalles_Centros</relationshipName>
    <type>Lookup</type>
</CustomField>