force-app/main/default/objects/CC_Caracteristica_Detalle__c/fields/CC_Cliente__c.field-meta.xml
<CustomField>
    <fullName>CC_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cliente</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cliente (cuenta personal)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Clientes</relationshipLabel>
    <relationshipName>CC_Caracteristica_Detalles_Clientes</relationshipName>
    <type>Lookup</type>
</CustomField>