force-app/main/default/objects/CC_Caracteristica_Detalle__c/fields/CC_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>CC_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cliente</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cliente (cuenta personal)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuentas clientes</relationshipLabel>
    <relationshipName>CC_Cuentas_Clientes</relationshipName>
    <type>Lookup</type>
</CustomField>