force-app/main/default/objects/CC_Caracteristica_Detalle__c/fields/CC_Empleado__c.field-meta.xml
<CustomField>
    <fullName>CC_Empleado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empleado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Empleado</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Empleados</relationshipLabel>
    <relationshipName>CC_Caracteristica_Detalles_Empleados</relationshipName>
    <type>Lookup</type>
</CustomField>