force-app/main/default/objects/CC_Caracteristica_Detalle__c/fields/CC_Identificador__c.field-meta.xml
<CustomField>
    <fullName>CC_Identificador__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Identificador</label>
    <length>14</length>
    <type>Text</type>
</CustomField>