force-app/main/default/objects/CC_Caracteristica_Detalle__c/fields/CC_Procesado_Batch__c.field-meta.xml
<CustomField>
    <fullName>CC_Procesado_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag que nos va a indicar si el batch lo ha procesado al actualizar e informar la cuenta/contacto asociada a la caracteristica.</description>
    <label>Procesado Batch</label>
    <type>Checkbox</type>
</CustomField>