force-app/main/default/objects/CC_Caracteristica_Detalle__c/fields/CC_Tipo_Centro__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Centro__c</fullName>
    <formula>CC_Centro_CaixaBank__r.CC_Tipo_Centro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de centro</label>
    <type>Text</type>
</CustomField>