force-app/main/default/objects/CC_Caracteristica_Detalle__c/fields/SAC_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>SAC_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que muestra las cuentas de SAC</description>
    <label>Cuenta</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cliente</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Cliente Particular</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>No Cliente PA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Característica Detalles (Cuenta)</relationshipLabel>
    <relationshipName>SAC_Cuentas_Clientes</relationshipName>
    <type>Lookup</type>
</CustomField>