force-app/main/default/objects/CC_Caracteristica_Detalle__c/fields/SAC_Identificador__c.field-meta.xml
<CustomField>
    <fullName>SAC_Identificador__c</fullName>
    <description>Almacena el identificador correspondiente a un CIF o nombre de despacho</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Identificador</label>
    <length>100</length>
    <type>Text</type>
</CustomField>