force-app/main/default/objects/CC_Caracteristica_Detalle__c/validationRules/CC_Centro_No_Inactivo.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_Centro_No_Inactivo</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE( CC_Centro_CaixaBank__c ) !=  CC_Centro_CaixaBank__c &amp;&amp;
 CC_Centro_CaixaBank__r.CC_Inactivo__c</errorConditionFormula>
    <errorDisplayField>CC_Centro_CaixaBank__c</errorDisplayField>
    <errorMessage>El centro CaixaBank seleccionado no debe estar marcado como inactivo.</errorMessage>
</ValidationRule>