force-app/main/default/objects/CC_Caracteristica_Detalle__c/validationRules/CC_Cliente_No_Inactivo.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_Cliente_No_Inactivo</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE( CC_Cliente__c ) !=  CC_Cliente__c &amp;&amp;
CC_Cliente__r.CC_Inactivo__c = TRUE</errorConditionFormula>
    <errorDisplayField>CC_Cliente__c</errorDisplayField>
    <errorMessage>El cliente seleccionado no puede estar marcado como inactivo.</errorMessage>
</ValidationRule>