force-app/main/default/objects/CC_Caracteristica_Detalle__c/validationRules/CC_Cuenta_No_Inactivo.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_Cuenta_No_Inactivo</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE( CC_Cuenta__c ) !=  CC_Cuenta__c &amp;&amp;
CC_Cuenta__r.CC_Inactivo__c = TRUE</errorConditionFormula>
    <errorDisplayField>CC_Cuenta__c</errorDisplayField>
    <errorMessage>La cuenta seleccionada no debe estar marcada como inactiva.</errorMessage>
</ValidationRule>