force-app/main/default/objects/CC_Caracteristica_Detalle__c/validationRules/CC_Empleado_No_Inactivo.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_Empleado_No_Inactivo</fullName>
    <active>false</active>
    <errorConditionFormula>PRIORVALUE( CC_Empleado__c ) !=  CC_Empleado__c &amp;&amp;
 CC_Empleado__r.CC_Inactivo__c = TRUE</errorConditionFormula>
    <errorDisplayField>CC_Empleado__c</errorDisplayField>
    <errorMessage>El empleado no puede estar marcado como inactivo.</errorMessage>
</ValidationRule>